# pippin

./: .gitignore  README.md  manage.py  pyproject.toml
pippin/: .env.example  asgi.py  settings.py  urls.py  wsgi.py
scambaiting/: admin.py  apps.py  models.py  serializers.py  tests.py  urls.py  validators.py  views.py
scambaiting/migrations/: 0001_initial.py  0002_email_cc_person_bio.py  0002_remove_email_previous_alter_email_final_comment_and_more.py  0003_remove_email_unique_entry_for_thread_and_more.py  0003_remove_person_address.py  0004_faq.py  0004_thread_published.py  0005_alter_email_cc_alter_email_subject_and_more.py  0006_alter_email_options.py  0007_alter_image_image.py  0008_person_baiter_alter_email_body_alter_email_cc.py  0009_thread_correspondents.py
