[project]
name = "pippin"
version = "0.1.0"
description = "Backend for scambaiting website"
authors = [
    {name = "Chris Hengler",email = "chrysics@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = "<4,>=3.12"
dependencies = [
    "django (>=5.1.6,<6.0.0)",
    "psycopg2 (>=2.9.10,<3.0.0)",
    "djangorestframework (>=3.15.2,<4.0.0)",
    "django-cors-headers (>=4.6.0)",
    "django-environ (>=0.12.0)",
    "pillow (>=11.1.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
